Fengtian work, fixes

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -476,7 +476,7 @@ fengtian.new.8.t:0 "Land Reform Underway"
 fengtian.new.8.d:0 "For better or worse, land reform is now underway at both the local and national levels, with officials superseding the local Xiangshen to assert the central government's sovereignty for the first time in hundreds of years. However, while they have used that time to thoroughly game the machine of local administration, they were also its designers and engineers, forcing officials to proverbially re-invent the wheel. While many are satisfied, the economy is certain to suffer considerably, and it is unclear just how far the reforms will be able to go."
 fengtian.new.8.a:0 "This is the price of progress"
 #The Fate of Mantetsu Schooling
-fengtian.new.9.t:0 "The Fate of Mantetu Schooling"
+fengtian.new.9.t:0 "The Fate of Mantetsu Schooling"
 fengtian.new.9.d:0 "Mantetsu has long maintained a series of privately run schools originally intended for the sons and daughters of employees, as well as Japanese immigrants, which pride themselves on providing an education comparable to or even exceeding those available in the Home Islands. At the Japanese government's behest, these schools were more recently opened to the paying public, clearly as part of an attempt to spread Japanese culture and norms. However, the schools are crucial to education, not only because many children of Fengtian's wealthy are enrolled, but also because they provide their services at no government cost. \n\n Any attempt to close the Mantetsu schools to the public will be met not only with Japanese outrage, but a state of educational chaos as we try to pick up the slack. While the civil service has undergone reforms, it remains questionable as to whether our economy and domestic educational staff will be up to the challenge."
 fengtian.new.9.a:0 "Close the schools"
 fengtian.new.9.b:0 "There is no choice"
@@ -961,7 +961,7 @@ fengtian.informalempire.5.a:0 "These are dire times"
 ### Protest Events ###
 
 fengtian.informalempire.6.t:0 "Anti-Japanese Protests"
-fengtian.informalempire.6.d:0 "Angered by Japan's increasing control over our country, protests have broken out in Mukden, Harbin, and Changchun. Police and military units are already on site, containing the protests, but the damage is already done.
+fengtian.informalempire.6.d:0 "Angered by Japan's increasing control over our country, protests have broken out in Mukden, Harbin, and Changchun. Police and military units are already on site, containing the protests, but the damage is already done."
 fengtian.informalempire.6.a:0 "Unfortunate"
 
 fengtian.informalempire.7.t:0 "Major Anti-Japanese Protests"
