--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -897,6 +897,34 @@ japfor.206.a:0 "Punish this insolence!"
 japfor.206.b:0 "Denounce Fengtian"
 japfor.206.c:0 "Stay silent"
 
+japfor.207.t:0 "The Fading Sun"
+japfor.207.d:0 "Our glorious army has fully pushed the imperialist Japanese invaders from the mainland, whilst the IJN are reduced to attempting mere blockades. Our spies in Tokyo report severe dissent and war weariness among the populace. In light of this, the government has called a conference in occupied Dairen to determine our war aims."
+japfor.207.a:0 "Our goals have been achieved"
+japfor.207.b:0 "Push on"
+
+japfor.208.t:0 "The Fading Sun"
+japfor.208.d:0 "This is a dark day for the Empire of the Sun. Fengtian Government forces have ousted our men from their vital bases in Manchuria and Korea. On top of this, a declaration has been sent out from Dairen by the Grand Marshal offering terms that demand our surrender of all territories on the Chinese mainland as well as the return of Taiwan and the independence of Korea.
+japfor.208.a:0 "Surrender is the only option"
+japfor.208.b:0 "Surrender is never an option. Banzai!"
+
+japfor.209.t:0 "Japan is defeated and Korea is freed"
+japfor.209.d:0 "We have retaken our ancestral homeland of Manchuria, and now Korea is under our control!"
+japfor.209.a:0 "Huzzah!"
+
+japfor.210.t:0 "Transamur is isolated"
+japfor.210.d:0 "After the Chinese pushed the Japanese back to their Home Islands, Transamur has been in chaos. The Japanese elite have fled back to their home and orders is beginning to break down. The people are ready to depose of Kolchak and return to the Motherland's embrace."
+japfor.210.a:0 "Move in and bring Transamur back under our control."
+
+japfor.211.t:0 "The Fading Sun"
+japfor.211.d:0 "The Japanese empire has been utterly defeated by their mortal enemies and forced to surrender all of their mainland territory. We may be able to force them to make a similar deal with us."
+japfor.211.a:0 "Demand all territory outside Japan itself"
+japfor.211.b:0 "The war will continue until we see fit."
+
+japfor.212.t:0 "The Germans demand our Overseas Territory"
+japfor.212.d:0 "After being defeated by our mortal enemies, the Germans are now demanding that we turn over all our remaining territory outside our own sacred soil to them."
+japfor.212.a:0 "We Give up! As long as our sacred homeland is intact!"
+japfor.212.b:0 "Never! Banzai!"
+
 ### Opinion Modifiers ###
 mon_demanded_states:0 "Demanded Territories"
 RUS_JAP_ally_1:0 "Agreed to Alliance"
