--- a/localisation/KR_Japan_l_english.yml
+++ b/localisation/KR_Japan_l_english.yml
@@ -447,6 +447,10 @@ japdom.63.t:0 "The Drought Ends"
 japdom.63.d:0 "After many months of suffering, the drought has finally ended and the country begins its recovery."
 japdom.63.a:0 "Finally!"
 
+japdom.64.t:0 "Fengtian Agrees to Provide Food"
+japdom.64.d:0 "The Fengtian Government has agreed to provide food, and the major negative effects of the drought should subside soon.
+japdom.64.a:0 "Good news"
+
 ### Tooltips ###
 niigata_focus:0 "The following weeks will determine the course of Japanese history. Choose wisely..."
 JAP_NAG:0 "Purged Restorationists"
