Mexican intervention in Central America

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -268,7 +268,7 @@ mexico.65.t:0 "Mexico accepts our demands"
 mexico.65.d:0 "The government of Mexico has folded before our might and accepted our demands. Now the former western and southwestern states are back under our American control!"
 mexico.65.a:0 "Great!"
 mexico.66.t:0 "Mexico declines our demands"
-mexico.66.d:0 "The government of Mexico has refused to follow our demands and are insisting that the occupied western and southwestern American states are their rightful territory. We must attack them now!"
+mexico.66.d:0 "The goverThe United Provinces have accepted"nment of Mexico has refused to follow our demands and are insisting that the occupied western and southwestern American states are their rightful territory. We must attack them now!"
 mexico.66.a:0 "That's it - Ready the troops and attack"
 mexico.66.b:0 "We're not ready for war now - Back down"
 mexico.67.t:0 "Peace with the Mexicans"
@@ -279,7 +279,36 @@ mexico.68.t:0 "Americans Sue for peace"
 mexico.68.d:0 "We have been defeated by the American forces, they have driven us back to our own territory, we have just received a message from the Americans that they are willing to make with us. Should we return the American territory?"
 mexico.68.a:0 "We have no choice..."
 mexico.68.b:0 "Never! We will fight to the death!"
-
+mexico.70.t:0 "Syndicalist Centroamerica at war"
+mexico.70.d:0 "The socialist federation of Centroamerica are currently in a war against their reactionary neighbours. We must intervene, but how?"
+mexico.70.a:0 "Send volunteers to Centroamerica"
+mexico.70.b:0 "Propose an alliance between our countries"
+mexico.70.c:0 "We shouldn't get involved"
+mexico.71.t:0 "Mexican volunteers arrive"
+mexico.71.d:0 "The government of Socialist Mexico has sent a volunteer division to help in our war against the reactionaries!"
+mexico.71.a:0 "Great!"
+mexico.72.t:0 "An alliance with Mexico?"
+mexico.72.d:0 "The government of Socialist Mexico has proposed us an alliance to help on the fighting against our reactionary enemies. Should we accept?"
+mexico.72.a:0 "Sure, forge an alliance for socialism"
+mexico.72.b:0 "We can handle this by our own, sorry"
+mexico.73.t:0 "Centroamerica has accepted"
+mexico.73.d:0 "The government of Centroamerica has accepted our proposal and entered an alliance with Mexico!"
+mexico.73.a:0 "Great!"
+mexico.74.t:0 "War in Central America"
+mexico.74.d:0 "Our friends of the United Provinces are currently in a war against their socialist neighbours, Centroamerica. We must intervene, but how?"
+mexico.74.a:0 "Send volunteers to the United Provinces"
+mexico.74.b:0 "Propose an alliance between our countries"
+mexico.74.c:0 "We shouldn't get involved"
+mexico.75.t:0 "Mexican volunteers arrive"
+mexico.75.d:0 "The government of Mexico has sent us a volunteer division to help in our war against the socialists!"
+mexico.75.a:0 "Great!"
+mexico.76.t:0 "An alliance with Mexico?"
+mexico.76.d:0 "The government of  Mexico has proposed us an alliance to help on the fighting against our syndicalist enemies. Should we accept?"
+mexico.76.a:0 "Sure, forge an alliance against socialism"
+mexico.76.b:0 "We can handle this by our own, sorry"
+mexico.77.t:0 "The United Provinces have accepted""
+mexico.77.d:0 "The government of the United Provices has accepted our proposal and entered an alliance with Mexico!"
+mexico.77.a:0 "Great!"
 ### Focuses ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
