--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -202,10 +202,10 @@ chl.3.d:0 "After the Saltpetre War 1879 - 1883 in which Chile received the Peruv
 chl.3.a:0 "The Light of Syndicalism will guide us to the future, whatever it may hold"
 chl.4.t:0 "The Fourth Chairman"
 chl.4.d:0 "After 10 years of a stable government, the people of Chile rejoice at the prosperity and peace the revolution brought. And now comes the time to elect the Fourth Chairman of the Chilean Syndicalist Republic. Four candidates are running the ballot, and 3 of them are respected and well regarded poets and writers. Gabriela Mistral leads the Pacto de Calais, a broad coalition of intellectuals and politicians who defend the Republic's central government, but unlike Pablo de Rokha's Totalists, do see regular elections and personal freedoms as of something of the utmost importance. The Orthodox Syndicalists are led by Pablo Neruda, yet another very accomplished writer and poet. Meanwhile, the broad Social Front led by Aurelio Celedon Palma has gained some momentum, especially with the rise of autonomist sentiments in the southern half of the nation. But who will win the Poet's Brawl, as the press likes calling this heated contest?
-chl.4.a:0 "Gabriela Mistral and the Heterodox Syndicalists"
-chl.4.b:0 "Pablo Neruda and the Orthodox Syndicalists"
-chl.4.c:0 "Aurelio Celedon Palma and the Social Front"
-chl.4.e:0 "Pablo de Rokha and the Mosleyists"
+chl.4.a:0 "Lucila Godoy y Alcayaga ,better known as Gabriela Mistral, and the Heterodox Syndicalists"
+chl.4.b:0 "Ricardo Eliécer Neftalí, better known as Pablo Neruda, and the Orthodox Syndicalists"
+chl.4.c:0 "Aurelio Celedon Palma, the militaryman, and the Social Front"
+chl.4.e:0 "Carlos Díaz Loyola ,better known as Pablo de Rokham and the Mosleyists"
 chl.ally.1.t:0 "Chile wishes to join the Internationale"
 chl.ally.1.d:0 "The workers revolution in Chile has been greatly successful, a shining model in the Southern Hemisphere of revolutionary ideals. However, they feel threatened by reactionary neighbours and other imperialist threats, and feel like it's high time to join the Internationale"
 chl.ally.1.a:0 "Let us welcome then in the struggle for World Revolution!"
