--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -941,6 +941,22 @@ fengtian.new.121.t:0 "Creeping Mantetsu Influence"
 fengtian.new.121.d:0 "As it has done for years, Mantetsu continues its slow but sure efforts to dominate our economy, investing in businesses, buying others up, and diversifying across the industrial sector."
 fengtian.new.121.a:0 "This must be resisted"
 
+fengtian.new.122.t:0 "The Generals Grow Restless"
+fengtian.new.122.d:0 "Worried by their diminishing influence in the Assembly, and throughout the government, powerful members among the Zhang Clique have begun voicing their discontent, claiming that if they so desired, the entire assembly could be dissolved in minutes by force of arms. These statements have been reinforced by a slow but steady increase in the capital's garrison, which would almost certainly overwhelmingly side with their patron generals in the event of any political upheaval."
+fengtian.new.122.a:0 "Worrying"
+
+fengtian.new.123.t:0 "Railway and Telegraph Mysteries"
+fengtian.new.123.d:0 "Ministers and other government officials have strangely found themselves immensely inconvenienced as of late, with telegrams going missing or relayed to the wrong people, secrets uttered only over the telephone suddenly becoming public, and trains mysteriously arriving chronically late. Of course, most are well aware that this is merely the Communications Clique showing its discontent with its recent diminishing influence, and it seems likely that these measures it has taken will reinforce its necessity to the government's effective functioning."
+fengtian.new.123.a:0 "Such is politics"
+
+fengtian.new.124.t:0 "Heinous Assassination in Mukden!"
+fengtian.new.124.d:0 "On his way to government offices, a member of the Communications Clique was gunned down in public by what appears to be a Qing loyalist, recruited from among the Northeast's Manchu population! The Qing have been known to recruit spies and assassins before, but some rumors suggest that this assassin was instead hired by members of the Concordia Association, locked in conflict with the Communications Clique's Railway and Telegraph barons for control of the country's infrastructure."
+fengtian.new.124.a:0 "A terrible loss"
+
+fengtian.new.125.t:0 "Record Mantetsu Profits"
+fengtian.new.125.d:0 "The South Manchuria Railway Company, colloquially Mantetsu, has long dominated large sectors of Fengtian's economy, and in turn acts as Japan's primary means of influence over the government. While this influence is unwelcome, it brings crucial capital and technology without which the Grand Marshal could never hope to retake China \n\n The Company has today announced record profits, much of which goes to Japan's government in the form of tax revenue."
+fengtian.new.125.a:0 "Is this a necessary evil?"
+
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward! Zhonghua Mingguo Wansui!"
@@ -949,8 +965,8 @@ fengtian.informalempire.2.t:0 "Preservation of the Xinhai Order"
 fengtian.informalempire.2.d:0 "Fengtian is the sole standing government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although some say that our republican commitments are questionable, and full scale war against the restored Qing is currently unrealistic, the government loudly advocates both goals, as they foster legitimacy in the eyes of all Chinese."
 fengtian.informalempire.2.a:0 "Defend the revolutionary values!"
 fengtian.informalempire.3.t:0 "Mantetsu Influence"
-fengtian.informalempire.3.d:0 "The South Manchuria Railway Company, colloquially Mantetsu, has long dominated large sectors of Fengtian's economy, and in turn acts as Japan's primary means of influence over the government. While this influence is unwelcome, it brings crucial capital and technology without which the Grand Marshal could never hope to retake China."
-fengtian.informalempire.3.a:0 "A necessary evil"
+fengtian.informalempire.3.d:0 "Mantetsu's economic influence spreads across the country and through the assembly. While the government is, for now, committed to privately resisting, their efforts seem to grow weaker by the day."
+fengtian.informalempire.3.a:0 "A necessary evil?"
 fengtian.informalempire.4.t:0 "Pervasive Mantetsu Influence"
 fengtian.informalempire.4.d:0 "Our factories rumble with activity, churning out weapons, supplies, and every-day conveniences at an astounding rate. None of this would be possible without Japan, but whispers of discontent abound. Who are we fighting for, China or Japan? Is the Republic really being strengthened, or instead brought to its knees by foreign exploitation? Is this truly necessary?"
 fengtian.informalempire.4.a:0 "How much further can this go?"
