Mexico can into Internationale

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -309,6 +309,20 @@ mexico.76.b:0 "We can handle this by our own, sorry"
 mexico.77.t:0 "The United Provinces have accepted""
 mexico.77.d:0 "The government of the United Provices has accepted our proposal and entered an alliance with Mexico!"
 mexico.77.a:0 "Great!"
+mexico.78.t:0 "A Franco-Mexican Alliance?"
+mexico.78.d:0 "The Americans have invaded us in the third Mexican-American war, we might not be able to handle this on our own. But not all hope is lost, we could join the Internationale, to do that we need to send a message to the French. Should we try to join the Internationale?"
+mexico.78.a:0 "Send the message"
+mexico.78.b:0 "We don't need their help"
+mexico.79.t:0 "Mexico wants to join the Internationale"
+mexico.79.d:0 "Mexico, on the other side of the Atlantic Ocean, is one of the oldest socialist countries in the world - and thus a great friend of our Commune. And now, they are under attack from the reactionary American forces. Now they ask us for help against the Americans. We must stand firm in the defense of the Mexican comrades! Should we let them join the Internationale?"
+mexico.79.a:0 "Let them join"
+mexico.79.b:0 "We cannot risk war with the US"
+mexico.80.t:0 "France has accepted us into the Internationale"
+mexico.80.d:0 "The French have accepted us into the Internationale, we now have the aid of workers from around the world. The Gringo dogs will not be able to beat us now"
+mexico.80.a:0 "Trabajadores del mundo, únanse!"
+mexico.81.t:0 "France has denied our entry into the Internationale"
+mexico.81.d:0 "The French have denied us into the Internationale, we now need to fend off the Americans alone, will we be able to survive their attacks?"
+mexico.81.a:0 "Damn it!"
 ### Focuses ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
