--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -209,7 +209,7 @@ TEX_reclaim_new_england_desc:0 "Canada attacked New England and has kept it unde
 TEX_reclaim_hawaii:0 "Reclaim Hawaii"
 TEX_reclaim_hawaii_desc:0 "Hawaii was taken over barely 50 years ago. Now we must decide what to do with the island. Should we bring it back within the Union or should they be our ally instead?"
 TEX_fate_of_the_philippines:0 "Reclaiming Alaska"
-TEX_fate_of_the_philippines_desc:0 Alaska was ours before the civil war but during the chaos it was lost. Now that the civil war is over, we should go and reclaim Alaska for America!"
+TEX_fate_of_the_philippines_desc:0 "Alaska was ours before the civil war but during the chaos it was lost. Now that the civil war is over, we should go and reclaim Alaska for America!"
 TEX_league_of_nations:0 "League of American States"
 TEX_league_of_nations_desc:0 "To protect America, we should make sure that the other countries in America are friendly to us and do not let godless syndicalism to fester in their countries. The idea of a League of American States has been proposed to defend American interests and oppose Syndicalism throughout the Americas. "
 american_states_league_of_nations:0 "League of American States"
@@ -218,9 +218,9 @@ TEX_american_school_desc:0 "Knowledge will keep America and her allies safe. We 
 TEX_war_plan_red:0 "War Plan Red"
 TEX_war_plan_red_desc:0 "Our military Strategists have developed a plan for dealing with Canada. Long in the past we have had dreams of America including Canada. With the Civil war and the Canadians deciding to 'liberate' New England. They have shown them to be nothing but dangerous snakes. To protect America we must prepare to Invade Canada!"
 TEX_entente_embargo:0 "Embargo the Entente"
-TEX_entente_embargo_desc:0 "The economic might of America will be enough to bring the last remenents of the British Empire down to her knees. An embargo will destroy them and prepare us for the final killing blow against these snakes in the grass Canadians. "
+TEX_entente_embargo_desc:0 "The economic might of America will be enough to bring the last remnants of the British Empire down to her knees. An embargo will destroy them and prepare us for the final killing blow against these snakes in the grass Canadians. "
 TEX_invade_canada:0 "Invade Canada"
-TEX_invade_canada_desc:0 "Now is the time to invade Canada! Time to once and for all pacify our neighbors to the north and make sure that the Canadians can never again try to go after America! God shall protect us as we help fight to make America safe from the dastardly Canadians!"
+TEX_invade_canada_desc:0 "Now is the time to invade Canada! Time to once and for all pacify our neighbours to the north and make sure that the Canadians can never again try to go after America! God shall protect us as we help fight to make America safe from the dastardly Canadians!"
 
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
