--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -122,8 +122,8 @@ AUS_small_ships_effort_desc:0 "It has been decided that we need new models for d
 
 AUS_ausgleich:0 "1937 Ausgleich"
 
-AUS_homeland:0 "Centralise the Empire"
-AUS_homeland_desc:0 "We have gained control over all Austro-Hungarian lands and its time to centralise into one government under the Kaiser. This might anger some people but we will make them accept our rightful claims!"
+AUS_direct_rule:0 "Centralise the Empire"
+AUS_direct_rule_desc:0 "We have gained control over all Austro-Hungarian lands and its time to centralise into one government under the Kaiser. This might anger some people but we will make them accept our rightful claims!"
 AUS_pintsch:0 "Pintsch AG"
 AUS_bayer:0 "Bayer Österreich"
 AUS_research_expanded:0 "Funds for the Vienna Circle"
