--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -954,7 +954,7 @@ fengtian.new.124.d:0 "On his way to government offices, a member of the Communic
 fengtian.new.124.a:0 "A terrible loss"
 
 fengtian.new.125.t:0 "Record Mantetsu Profits"
-fengtian.new.125.d:0 "The South Manchuria Railway Company, colloquially Mantetsu, has long dominated large sectors of Fengtian's economy, and in turn acts as Japan's primary means of influence over the government. While this influence is unwelcome, it brings crucial capital and technology without which the Grand Marshal could never hope to retake China \n\n The Company has today announced record profits, much of which goes to Japan's government in the form of tax revenue."
+fengtian.new.125.d:0 "The South Manchuria Railway Company, colloquially Mantetsu, has long dominated large sectors of Fengtian's economy, and in turn acts as Japan's primary means of influence over our government. While this influence is unwelcome, it brings crucial capital and technology without which the Grand Marshal could never hope to retake China \n\n The Company has today announced record profits, much of which goes to Japan's government in the form of tax revenue."
 fengtian.new.125.a:0 "Is this a necessary evil?"
 
 ### Informal Empire Mechanic ###
