--- a/localisation/KR_Piratini_l_english.yml
+++ b/localisation/KR_Piratini_l_english.yml
@@ -51,7 +51,7 @@ PIR_army_desc:0 "Our artillery pieces are not up the standards of modern wafare,
 PIR_doct:0 "Modern Combat Doctrine"
 PIR_doct_desc:0 "The ways of war are ever changing, and our rising nation will not cling to old ideas and principles, but to what is truly shaping the modern battlefield"
 PIR_eq:0 "Infantry Equipment Manufacturing"
-PIR_eq_desc:0 In order to ensure our safety, we need to ensure our armed forces are well armed enough to defend us"
+PIR_eq_desc:0 "In order to ensure our safety, we need to ensure our armed forces are well armed enough to defend us"
 PIR_miltech:0 "Military Technology Effort"
 PIR_miltech_desc:0 "If we fail to adapt to the new mechanisms of war, we will fall just like our forerruners did a century ago"
 PIR_farrapo_legacy:0 "Tattered Spirit"
