--- a/localisation/KR_Uruguay_l_english.yml
+++ b/localisation/KR_Uruguay_l_english.yml
@@ -59,7 +59,7 @@ URG_inf_desc:0 "More up do date military equipment will be needed to arm our men
 URG_mobility:0 "Mobility Doctrines"
 URG_mobility_desc:0 "In the plains of Uruguay, it doesnt take an officer to realize how moving in a fast and efficent manner is the way forward to defend and attack"
 URG_mechanization:0 "Mechanised Warfare"
-URG_mechanization_desc:0 Our armed forces will need armored speaheads to properly wage war, and the tanks do those as well!"
+URG_mechanization_desc:0 "Our armed forces will need armored speaheads to properly wage war, and the tanks do those as well!"
 URG_techslot:0 "Military Science Developments"
 URG_techslot_desc:0 "We will ensure our army is not left behind in the race of military techonology sweeping the globe as we speak"
 URG_airbases:0 "Expanded Airbases"
