--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -33,6 +33,7 @@ FNG_manufacture_minsheng_unlock:0 "Unlocks the Minsheng Automobile Company. \n"
 FNG_incentivize_zaibatsu_arms_manufacture_unlock:0 "Unlocks the Mitsubishi Heavy Industries company. \n"
 FNG_standardize_equipment_unlock:0 "Unlocks the Mukden Arsenal company \n"
 FNG_remove_investment_dearth:0 "Helps remove the Investment Dearth national spirit. \n"
+FNG_WIP:0 "This focus is a Work in Progress, and will be completed along with the full China rework later this year. \n"
 
 ### Focus Flags ###
 doihara_cigarettes:0 "Doihara's Proposal"
