POL + PLC Bugfixing. Hooray release day.

--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1436,6 +1436,79 @@ TUR_tac_bomber_equipment_2_short:0 "THK Baltimore"
 TUR_tac_bomber_equipment_3:0 "THK Invader"
 TUR_tac_bomber_equipment_3_short:0 "THK Invader"
 
+### Polish-Lithuanian Commonwealth ###
+
+PLC_fighter_equipment_0:0 "PZL.11"
+PLC_fighter_equipment_0_short:0 "PZL.11"
+PLC_cv_fighter_equipment_0:0 "PZL.11 Floty"
+PLC_cv_fighter_equipment_0_short:0 "PZL.11 Floty"
+PLC_fighter_equipment_1:0 "PZL.50 Jastrząb"
+PLC_fighter_equipment_1_short:0 "Jastrząb"
+PLC_cv_fighter_equipment_1:0 "PZL.50 Jastrząb Floty"
+PLC_cv_fighter_equipment_1_short:0 "Jastrząb Floty"
+PLC_fighter_equipment_2:0 "PZL.56 Kania"
+PLC_fighter_equipment_2_short:0 "Kania"
+PLC_cv_fighter_equipment_2:0 "PZL.56 Kania Floty"
+PLC_cv_fighter_equipment_2_short:0 "Kania Floty"
+PLC_fighter_equipment_3:0 "PZL.62 Pustułka"
+PLC_fighter_equipment_3_short:0 "Pustułka"
+PLC_cv_fighter_equipment_3:0 "PZL.62 Pustułka Floty"
+PLC_cv_fighter_equipment_3_short:0 "Pustułka Floty"
+PLC_jet_fighter_equipment_1:0 "PZL.71 Orzeł"
+PLC_jet_fighter_equipment_1_short:0 "Orzeł"
+PLC_jet_fighter_equipment_2:0 "PZL.76 Sęp"
+PLC_jet_fighter_equipment_2_short:0 "Sęp"
+PLC_CAS_equipment_1:0 "PZL.23 Karaś"
+PLC_CAS_equipment_1_short:0 "Karaś"
+PLC_cv_CAS_equipment_1:0 "PZL.23 Karaś Floty"
+PLC_cv_CAS_equipment_1_short:0 "Karaś Floty"
+PLC_CAS_equipment_2:0 "PZL.46 Sum"
+PLC_CAS_equipment_2_short:0 "Sum"
+PLC_cv_CAS_equipment_2:0 "PZL.46 Sum Floty"
+PLC_cv_CAS_equipment_2_short:0 "Sum Floty"
+PLC_CAS_equipment_3:0 "PZL.59 Okoń"
+PLC_CAS_equipment_3_short:0 "Okoń"
+PLC_cv_CAS_equipment_3:0 "PZL.59 Okoń Floty"
+PLC_cv_CAS_equipment_3_short:0 "Okoń Floty"
+PLC_heavy_fighter_equipment_1:0 "PZL.38 Wilk"
+PLC_heavy_fighter_equipment_1_short:0 "Wilk"
+PLC_heavy_fighter_equipment_2:0 "PZL.54 Ryś"
+PLC_heavy_fighter_equipment_2_short:0 "Ryś"
+PLC_heavy_fighter_equipment_3:0 "PZL.65 Lis"
+PLC_heavy_fighter_equipment_3_short:0 "Lis"
+PLC_tac_bomber_equipment_0:0 "LWS-6 Żubr"
+PLC_tac_bomber_equipment_0_short:0 "Żubr"
+PLC_tac_bomber_equipment_1:0 "PZL.37 Łoś"
+PLC_tac_bomber_equipment_1_short:0 "Łoś"
+PLC_tac_bomber_equipment_2:0 "PZL.49 Miś"
+PLC_tac_bomber_equipment_2_short:0 "Miś"
+PLC_tac_bomber_equipment_3:0 "PZL.63 Dzik"
+PLC_tac_bomber_equipment_3_short:0 "Dzik"
+PLC_jet_tac_bomber_equipment_1:0 "PZL.70 Borsuk"
+PLC_jet_tac_bomber_equipment_1_short:0 "Borsuk"
+PLC_jet_tac_bomber_equipment_2:0 "PZL.78 Rosomak"
+PLC_jet_tac_bomber_equipment_2_short:0 "Rosomak"
+PLC_nav_bomber_equipment_1:0 "PZL.57 Foka"
+PLC_nav_bomber_equipment_1_short:0 "Foka"
+PLC_cv_nav_bomber_equipment_1:0 "PZL.57 Foka Floty"
+PLC_cv_nav_bomber_equipment_1_short:0 "Foka Floty"
+PLC_nav_bomber_equipment_2:0 "PZL.60 Lew Morski"
+PLC_nav_bomber_equipment_2_short:0 "Lew Morski"
+PLC_cv_nav_bomber_equipment_2:0 "PZL.60 Lew Morski Floty"
+PLC_cv_nav_bomber_equipment_2_short:0 "Lew Morski Floty"
+PLC_nav_bomber_equipment_3:0 "PZL.75 Mors"
+PLC_nav_bomber_equipment_3_short:0 "Mors"
+PLC_cv_nav_bomber_equipment_3:0 "PZL.75 Mors Floty"
+PLC_cv_nav_bomber_equipment_3_short:0 "Mors Floty"
+PLC_strat_bomber_equipment_1:0 "PZL.58 Pszczoła"
+PLC_strat_bomber_equipment_1_short:0 "Pszczoła"
+PLC_strat_bomber_equipment_2:0 "PZL.61 Osa"
+PLC_strat_bomber_equipment_2_short:0 "Osa"
+PLC_strat_bomber_equipment_3:0 "PZL.72 Szerszeń"
+PLC_strat_bomber_equipment_3_short:0 "Szerszeń"
+PLC_jet_strat_bomber_equipment_1:0 "PZL 79 Komar"
+PLC_jet_strat_bomber_equipment_1_short:0 "Komar"
+
 ### China ###
 
 CHI_fighter_equipment_0:0 "Liuchow Kwangsi Type 3"
