--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -247,6 +247,43 @@ RUS_submarine_3_desc:0 "The Series XIV submarines are large cruising submarines 
 RUS_submarine_4:0 "Series XXV Kosatka"
 RUS_submarine_4_desc:0 "The Series XXV submarines, are the development of the previous cruising submarines projects, created for Russian Navy. Their design is heavily influenced by the German Type XXI submarines, and they are meant to replace the older Series XIV boats. They are large, ocean-going submarines with a heavy torpedo armament and long range."
 
+### Polish-Lithuanian Commonwealth ###
+
+PLC_submarine_1:0 "Wilk Class"
+PLC_submarine_1_desc:0 "The Wilk class consisted of three submarines built by the French for the Polish Navy and commissioned in the early 1930s. They were based on the French Saphir-class design. They were fairly large submarines, displacing nearly 1,000 tons. They were armed with six 550mm torpedo tubes and could dive up to 80m."
+PLC_submarine_2:0 "Orzeł Class"
+PLC_submarine_2_desc:0 "The Orzeł class consisted of two Submarines built in the Netherlands for the Polish Navy. The ships were completed just months before the German invasion. They were large submarines, displacing 1,100 tons. They were armed with twelve 550mm torpedo tubes and had a diving depth of 80m."
+PLC_submarine_3:0 "Sokół Class"
+PLC_submarine_3_desc:0 "The two submarines of the Sokół class were British U-class submarines completed for the Polish Navy in exile in 1941-42. The ships displaced 540 tons and were armed with four 533mm torpedo tubes. They had a good complement of British radar and sonar, and a diving depth of 60m."
+PLC_submarine_4:0 "Delfin Class"
+PLC_destroyer_1:0 "Wicher Class"
+PLC_destroyer_1_desc:0 "The two Wicher-class destroyers were the first large surface ships of the Polish Navy, and were commissioned between 1930 and 1932. They were large, displacing 1,540 tons. As designed, they were armed with four 130mm/40 M1924 guns, though these were upgraded to 120mm Swedish guns just before the German invasion. Their torpedo tubes and AA armament were improved as well."
+PLC_destroyer_2:0 "Grom Class"
+PLC_destroyer_2_desc:0 "The two destroyers of the Grom class were built in Britain for the Polish Navy and commissioned in 1937. They were among the largest and fastest destroyers of World War II. They displaced nearly 2,000 tons and were armed with five 120mm/50 caliber Bofors M34 cannon in their main armament. They also had six 533mm torpedo tubes and a good ASW complement."
+PLC_destroyer_3:0 "Piorun Class"
+PLC_destroyer_3_desc:0 "The Polish destroyer Piorun was a British N-class destroyer built for Polish Navy in exile and commissioned in 1940. It displaced 1,770 tons and had decent speed and reliability. It was armed with six 120mm/45 QF Mk XII cannon as its main guns, and also had five 533mm torpedo tubes, decent ASW equipment, and the then latest British radar and sonar."
+PLC_destroyer_4:0 "Burza Class"
+PLC_light_cruiser_1:0 "Warszawa Class"
+PLC_light_cruiser_2:0 "Łódź Class"
+PLC_light_cruiser_3:0 "Lwów Class"
+PLC_light_cruiser_4:0 "Poznań Class"
+PLC_heavy_cruiser_1:0 "Niemen Class"
+PLC_heavy_cruiser_2:0 "Wisła Class"
+PLC_heavy_cruiser_3:0 "Żuk Class"
+PLC_heavy_cruiser_4:0 "San Class"
+PLC_battle_cruiser_1:0 "Gdańsk Class"
+PLC_battle_cruiser_2:0 "Cieszyn Class"
+PLC_battleship_1:0 "Piast Class"
+PLC_battleship_2:0 "Przemyślid Class"
+PLC_battleship_3:0 "Andegawen Class"
+PLC_battleship_4:0 "Jagiellon Class"
+PLC_SH_battleship_1:0 "Piłsudski Class"
+PLC_SH_battleship_2:0 "Poniatowski Class"
+PLC_carrier_1:0 "Jan Sobieski Class"
+PLC_carrier_2:0 "Zygmunt Waza Class"
+PLC_carrier_3:0 "Stanisław August Class"
+PLC_carrier_4:0 "Fryderyk August Class"
+
 ### Ottoman Empire ###
 
 FLEET_NAME_OTT:0 "$NUMBER$. Donanma Firkasi"
