--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -2121,6 +2121,35 @@ GBR_modern_tank_equipment_1:0 "Centurion"
 GBR_modern_tank_equipment_1_short:0 "Centurion"
 
 ######################################
+## POLISH-LITHUANIAN COMMONWEALTH
+######################################
+
+PLC_gw_tank_equipment:0 "Renault FT"
+PLC_gw_tank_equipment_short:0 "Renault FT"
+PLC_light_tank_equipment_1:0 "TKS"
+PLC_light_tank_equipment_1_short:0 "TKS"
+PLC_light_tank_equipment_2:0 "7TP"
+PLC_light_tank_equipment_2_short:0 "7TP"
+PLC_light_tank_equipment_3:0 "9TP Chart"
+PLC_light_tank_equipment_3_short:0 "9TP"
+PLC_medium_tank_equipment_1:0 "10TP"
+PLC_medium_tank_equipment_1_short:0 "10TP"
+PLC_medium_tank_equipment_2:0 "14TP"
+PLC_medium_tank_equipment_2_short:0 "14TP"
+PLC_medium_tank_equipment_3:0 "41TP Husarz"
+PLC_medium_tank_equipment_3_short:0 "Husarz"
+PLC_heavy_tank_equipment_1:0 "27TP"
+PLC_heavy_tank_equipment_1_short:0 "27TP"
+PLC_heavy_tank_equipment_2:0 "32TP"
+PLC_heavy_tank_equipment_2_short:0 "32TP"
+PLC_heavy_tank_equipment_3:0 "45TP Bestia"
+PLC_heavy_tank_equipment_3_short:0 "Bestia"
+PLC_super_heavy_tank_equipment_1:0 "52TP Behemot"
+PLC_super_heavy_tank_equipment_1_short:0 "Behemot"
+PLC_modern_tank_equipment_1:0 "57TP Ułan"
+PLC_modern_tank_equipment_1_short:0 "Ułan"
+
+######################################
 ## Division Numbering Schemes
 ######################################
 
