--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -834,30 +834,30 @@ RTS_totalist:0 "Russian Republic"
 RTS_totalist_ADJ:0 "Russian"
 RTS_totalist_DEF:0 "The Russian Republic"
 
-FRP_GER_authoritarian_democrat:0 "Kingdom of France"
+FRP_GER_authoritarian_democrat:0 "French Kingdom"
 FRP_GER_authoritarian_democrat_ADJ:0 "French"
-FRP_GER_authoritarian_democrat_DEF:0 "The Kingdom of France"
-FRP_GER_market_liberal:0 "Kingdom of France"
+FRP_GER_authoritarian_democrat_DEF:0 "The French Kingdom"
+FRP_GER_market_liberal:0 "French Kingdom"
 FRP_GER_market_liberal_ADJ:0 "French"
-FRP_GER_market_liberal_DEF:0 "The Kingdom of France"
-FRP_GER_national_populist:0 "Kingdom of France"
+FRP_GER_market_liberal_DEF:0 "The French Kingdom"
+FRP_GER_national_populist:0 "French Kingdom"
 FRP_GER_national_populist_ADJ:0 "French"
-FRP_GER_national_populist_DEF:0 "The Kingdom of France"
-FRP_GER_paternal_autocrat:0 "Kingdom of France"
+FRP_GER_national_populist_DEF:0 "The French Kingdom"
+FRP_GER_paternal_autocrat:0 "French Kingdom"
 FRP_GER_paternal_autocrat_ADJ:0 "French"
-FRP_GER_paternal_autocrat_DEF:0 "The Kingdom of France"
+FRP_GER_paternal_autocrat_DEF:0 "The French Kingdom"
 FRP_GER_radical_socialist:0 "France"
 FRP_GER_radical_socialist_ADJ:0 "French"
 FRP_GER_radical_socialist_DEF:0 "France"
-FRP_GER_social_conservative:0 "Kingdom of France"
+FRP_GER_social_conservative:0 "French Kingdom"
 FRP_GER_social_conservative_ADJ:0 "French"
-FRP_GER_social_conservative_DEF:0 "The Kingdom of France"
-FRP_GER_social_democrat:0 "Kingdom of France"
+FRP_GER_social_conservative_DEF:0 "The French Kingdom"
+FRP_GER_social_democrat:0 "French Kingdom"
 FRP_GER_social_democrat_ADJ:0 "French"
-FRP_GER_social_democrat_DEF:0 "The Kingdom of France"
-FRP_GER_social_liberal:0 "Kingdom of France"
+FRP_GER_social_democrat_DEF:0 "The French Kingdom"
+FRP_GER_social_liberal:0 "French Kingdom"
 FRP_GER_social_liberal_ADJ:0 "French"
-FRP_GER_social_liberal_DEF:0 "The Kingdom of France"
+FRP_GER_social_liberal_DEF:0 "The French Kingdom"
 FRP_GER_syndicalist:0 "France"
 FRP_GER_syndicalist_ADJ:0 "French"
 FRP_GER_syndicalist_DEF:0 "France"
