Galicia fix and other dumb stuff

--- a/localisation/KR_AustriaFoci_l_english.yml
+++ b/localisation/KR_AustriaFoci_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
-AUS_hungarian_hegemony:0 "Hungarian Hegemony"
-HUN_hungarian_hegemony:0 "Hungarian Hegemony"
-HUN_hungarian_hegemony_broken:0 "Hungarian Hegemony Broken"
+AUS_financial_ties_broken:0 "Financial Ties with Hungary Broken"
+HUN_financial_ties_broken:0 "Financial Ties with Austria Broken"
+HUN_financial_ties:0 "Financial Ties with Austria"
 
 AUS_integrating_galicia:0 "The Kingdom of Galicia"
 AUS_cisleithania_united:0 "Cisleithania United"
