Localized POL and PLC parties

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1240,26 +1240,34 @@ UKR_RUSCOUP:0 "Russian Coup in Ukraine"
 russ_gives_passports:0 "Russian-Ukrainian Passports"
 POL_PRUSSIANPARTITION:0 "Laid Claim to the Prussian Partition"
 
-POL_totalist_party:0 "Free Worker's Party"
-POL_totalist_party_long:0 "The Free Worker's Party"
-POL_syndicalist_party:0 "Syndicalist Party"
-POL_syndicalist_party_long:0 "The Syndicalist Party"
-POL_radical_socialist_party:0 "Anarchist Party"
-POL_radical_socialist_party_long:0 "The Anarchist Party"
-POL_social_democrat_party:0 "Free Polish Party"
-POL_social_democrat_party_long:0 "The Free Polish Party"
-POL_social_liberal_party:0 "People's Coalition"
-POL_social_liberal_party_long:0 "The People's Coalition"
-POL_market_liberal_party:0 "Democratic Party"
-POL_market_liberal_party_long:0 "The Democratic Party"
-POL_social_conservative_party:0 "Patriotic Party"
-POL_social_conservative_party_long:0 "The Patriotic Party"
-POL_authoritarian_democrat_party:0 "Monarchist Party"
-POL_authoritarian_democrat_party_long:0 "The Monarchist Party"
-POL_paternal_autocrat_party:0 "Centralist Party"
-POL_paternal_autocrat_party_long:0 "The Centralist Party"
-POL_national_populist_party:0 "National-Radical Party"
-POL_national_populist_party_long:0 "The National-Radical Party"
+### Political Parties ###
+
+POL_totalist_party:0 "PWR"
+POL_totalist_party_long:0 "Partia Wolnych Robotników"
+POL_syndicalist_party:0 "PS"
+POL_syndicalist_party_long:0 "Partia Syndykalistyczna"
+POL_radical_socialist_party:0 "PA"
+POL_radical_socialist_party_long:0 "Partia Anarchistyczna"
+POL_social_democrat_party:0 "PWP"
+POL_social_democrat_party_long:0 "Partia Wolna Polska"
+POL_social_liberal_party:0 "LK"
+POL_social_liberal_party_long:0 "Ludowa Koalicja"
+POL_market_liberal_party:0 "PD"
+POL_market_liberal_party_long:0 "Partia Demokratyczna"
+POL_social_conservative_party:0 "PP"
+POL_social_conservative_party_long:0 "Partia Patriotyczna"
+POL_authoritarian_democrat_party:0 "PM"
+POL_authoritarian_democrat_party_long:0 "Partia Monarchistyczna"
+POL_paternal_autocrat_party:0 "PC"
+POL_paternal_autocrat_party_long:0 "Partia Centralistyczna"
+POL_national_populist_party:0 "ONR"
+POL_national_populist_party_long:0 "Obóz Narodowo-Radykalna"
+
+### Special Parties ###
+POL_paternal_autocrat_military_party:0 "BBWR"
+POL_paternal_autocrat_military_party_long:0 "Bezpartyjny Blok Współpracy z Rządem"
+POL_totalist_roza_party:0 "SDKP"
+POL_totalist_roza_party_long:0 "Socjaldemokracja Królestwa Polskiego"
 
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
