--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -686,26 +686,26 @@ plcommon.99.d:0 "We have received alarming news from across the border in the [P
 plcommon.99.a:0 "It is war, then."
 
 ### Parties ###
-PLC_totalist_party:0 "Free Worker's Party"
-PLC_totalist_party_long:0 "The Free Worker's Party"
-PLC_syndicalist_party:0 "Syndicalist Party"
-PLC_syndicalist_party_long:0 "The Syndicalist Party"
-PLC_radical_socialist_party:0 "Anarchist Party"
-PLC_radical_socialist_party_long:0 "The Anarchist Party"
-PLC_social_democrat_party:0 "Free Polish Party"
-PLC_social_democrat_party_long:0 "The Free Polish Party"
-PLC_social_liberal_party:0 "People's Coalition"
-PLC_social_liberal_party_long:0 "The People's Coalition"
-PLC_market_liberal_party:0 "Democratic Party"
-PLC_market_liberal_party_long:0 "The Democratic Party"
-PLC_social_conservative_party:0 "Patriotic Party"
-PLC_social_conservative_party_long:0 "The Patriotic Party"
-PLC_authoritarian_democrat_party:0 "Monarchist Party"
-PLC_authoritarian_democrat_party_long:0 "The Monarchist Party"
-PLC_paternal_autocrat_party:0 "Centralist Party"
-PLC_paternal_autocrat_party_long:0 "The Centralist Party"
-PLC_national_populist_party:0 "National-Radical Party"
-PLC_national_populist_party_long:0 "The National-Radical Party"
+PLC_totalist_party:0 "PWR"
+PLC_totalist_party_long:0 "Partia Wolnych Robotników"
+PLC_syndicalist_party:0 "PS"
+PLC_syndicalist_party_long:0 "Partia Syndykalistyczna"
+PLC_radical_socialist_party:0 "PA"
+PLC_radical_socialist_party_long:0 "Partia Anarchistyczna"
+PLC_social_democrat_party:0 "PWP"
+PLC_social_democrat_party_long:0 "Partia Wolna Polska"
+PLC_social_liberal_party:0 "LK"
+PLC_social_liberal_party_long:0 "Ludowa Koalicja"
+PLC_market_liberal_party:0 "PD"
+PLC_market_liberal_party_long:0 "Partia Demokratyczna"
+PLC_social_conservative_party:0 "PP"
+PLC_social_conservative_party_long:0 "Partia Patriotyczna"
+PLC_authoritarian_democrat_party:0 "PM"
+PLC_authoritarian_democrat_party_long:0 "Partia Monarchistyczna"
+PLC_paternal_autocrat_party:0 "PC"
+PLC_paternal_autocrat_party_long:0 "Partia Centralistyczna"
+PLC_national_populist_party:0 "ONR"
+PLC_national_populist_party_long:0 "Obóz Narodowo-Radykalna"
 
 ### Flags ###
 plc_polish_favor:0 "§RThis option will favour Poland in the makeup of the Commonwealth. This will have consequences.§! \n"
