fixing even more american bugs

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -412,7 +412,7 @@ CSA_mexican_american_trade:0 "Mexican-American trade treaty"
 ### Events ###
 combinedsyndicates.1.t:0 "The Second American Revolution"
 combinedsyndicates.1.d:0 "The Central Committee of the Combined Syndicates of America have issued a proclamation that all power in the former United States has now legitimately passed to the working classes, to be exercised through a Continental Chamber of Syndicates and defended from external enemies by the Revolutionary Syndicate Guards. The Secretary of the new Chamber is..."
-combinedsyndicates.1.a:0 "Norman Thomas, to improve worker's rights"
+combinedsyndicates.1.a:0 "James P. Cannon, to improve worker's rights"
 combinedsyndicates.1.b:0 "Max Schachtman, to nationalise the major industrial concerns"
 combinedsyndicates.1.c:0 "Paul Mattick, to sweep away all vestiges of the capitalist system"
 combinedsyndicates.1.e:0 "William Z. Foster, to create a disciplined army of labour"
